...
                addView(editText)
            }

        AlertDialog.Builder(context)
            .setTitle("Custom Port")
            .setView(container)
            .setPositiveButton("OK") { _, _ ->
                val portText = editText.text.toString()
                val port = portText.toIntOrNull()
                if (port != null && port in 1..65535) {
                    sharedPreferences?.let { prefs ->
                        setStringPrefValue(PORT_CUSTOM, MvcPreference.SSL_PORT_SELECTION, prefs)
                        setIntPrefValue(port, MvcPreference.SSL_CUSTOM_PORT, prefs)
...
